02 Aug 2004 mipsator
 * fixed pmk_set_variable() to check type of value to prevent coredump
   on syntax error (noticed by Han Boetes).
 * removed redundant (and confusing dependency in samples/pmkfile.sample
   (noticed by Han Boetes).

# snapshot 0.8.1-s3

28 Jul 2004 mipsator
 * added lex and yacc detection in pmksetup (request from chandlerc).
 * processed some XXXs.

25 Jul 2004 mipsator
 * improved configuration header processing in autoconf support.

# snapshot 0.8.1-s2

18 Jul 2004 mipsator
 * clean up the code before starting to play with parse_data().
 * fixed getopt() parameters in pmkscan.
 * added option to parse config file in parser_test.
 * modified parse_pmkconf() to use prseng structure.
 * improved parser to be able to process a multiple lines list.
 * modified pmkscan.dat to put list data in multiple lines.
 * fixed C++ library sample.

13 Jul 2004 mipsator
 * misc fixes and cleanup for experimental parsing engine.

12 Jul 2004 mipsator
 * imported experimental parser engine.
 * synced parser test.

11 Jul 2004 mipsator
 * fixed compatibility headers.

28 Jun 2004 mipsator
 * added variable substitution in pmkscan.
 * cleaned-up Makefile.pmk (obsolete tests).

27 Jun 2004 mipsator
 * added more stuff to prepare changes in pmkscan.

26 Jun 2004 mipsator
 * moved process_string() and single_append() into hash_tools.
 * updated pmkfile (was using obsolete commands).

16 Jun 2004 mipsator
 * fixed parse_pc_file().
 * fixed process_variables().
 * misc. changes.

22 May 2004 mipsator
 * hunted some more XXX ...

16 May 2004 mipsator
 * fixed some XXX remaining in parse.c and pmkinstall.c.

11 May 2004 mipsator
 * fixed samples to run properly.
 * added missing error messages.
 * added misc defines for LIBS and CFLAGS.

# snapshot 0.8.1-s1

02 May 2004 mipsator
 * fixed a bug recently introduced in CHECK_PKG_CONFIG.

24 Apr 2004 mipsator
 * more stuff related to the pmksetup engine changes.

15 Apr 2004 mipsator