@@ -3,6 +3,7 @@
    on syntax error (noticed by Han Boetes).
  * removed redundant (and confusing dependency in samples/pmkfile.sample
    (noticed by Han Boetes).
+ * added ELSE command to be less confusing than IF(!label).
 
 # snapshot 0.8.1-s3
 
